--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "web-app566",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "Simple Node.js app for Azure App Service",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2"
