--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-app566",
+  "name": "webapp566",
   "version": "1.0.0",
   "description": "Simple Node.js app for Azure App Service",
   "main": "index.js",
